# openfisca-tunisia

./: .gitignore  .gitlab-ci.yml  .mcp.json  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTES_CNSS_HISTORIQUE.md  OPENFISCA_AI_AUDIT_2026-03-14.md  README.md  TODO.md  __init__.py  check-version-bump.sh  deploy-if-version-bump.sh  logs.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_credits_manuel.py  test_css.py  test_css.yaml  test_debug.py  tunisie.code-workspace  utils.py
.circleci/: config.yml  has-functional-changes.sh
.conda/: meta.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  get_minimal_version.py  get_pypi_info.py  is-version-number-acceptable.sh  lint-changed-python-files.sh  pyproject_version.py  test-api.sh  workflow.yml
.github/workflows/: ai-review.yml  auto-changelog.yml  main.yml  tax-benefit.yml  validate.yml  validate_yaml.yml  workflow.yml
.gitlab/issue_templates/: bug.md  feature.md
.gitlab/merge_request_templates/: default.md
api/: api_config.ini  test.json
model/: common.py  cotsoc.py  data.py  irpp.py  model.py  pfam.py
notebooks/: demo-Copy1.ipynb  demo.ipynb  demo_survey_scenario.ipynb  test_notebooks.py
old_tests/: reforme_bareme.py
openfisca_tunisia/: __init__.py  conv.py  entities.py  scenarios.py  survey_scenarios.py  tunisia_taxbenefitsystem.py  units.yaml  utils.py
openfisca_tunisia/assets/: .~lock.EVOLUTION SMIGSMAG.xlsx#  EVOLUTION SMIGSMAG.xlsx  SMIG-40-48.xlsx  SMIGSMAG.xlsx  smig_parser.py  taux_de_cotisations_cnss_et_cnrps.xlsx
openfisca_tunisia/conf/: cache_blacklist.py
openfisca_tunisia/decompositions/: decomp.xml
openfisca_tunisia/doc/: SMIG-40-48.xlsx
openfisca_tunisia/model/: base.py  common.py  cotisations_sociales.py  cotsoc.py  data.py  datatrees.py  irpp.py  model.py  pfam.py  prestations_familiales.py  revenus.py
openfisca_tunisia/notebooks/: demo.ipynb
openfisca_tunisia/old_tests/: example.py  reforme_bareme.py
openfisca_tunisia/param/: param.xml  param_old.xml
openfisca_tunisia/parameters/: index.yaml
openfisca_tunisia/reforms/: de_net_a_brut.py  de_net_a_imposable.py  de_net_a_salaire_de_base.py  plf_2017.py  variables_by_regime.py
openfisca_tunisia/scripts/: api_test.py  check_path_length.py  generate_columns_tree.py  refactor_cotisation.py  reindent_xml_files.py  smig_parser.py
openfisca_tunisia/tests/: base.py  (+9 more)
param/: param.xml
tests/: base.py  core_tests.py  example.py  legislation_tests.py  reforme_bareme.py  test_basics.py  test_legislations.py  test_parameters.py  test_prestations_familiales.py  test_simple.py
views/: ui_composition.py
widgets/: Composition.py
(+3021 files in other folders)
