[project]
name = "OpenFisca-Tunisia"
version = "0.60"
description = "OpenFisca Rules as Code model for Tunisia."
readme = "README.md"
keywords = ["microsimulation", "tax", "benefit", "rac", "rules-as-code", "tunisia"]
authors = [
  {name = "OpenFisca Team", email = "contact@openfisca.org"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">= 3.10"
dependencies = [
    # "numpy >=1.24.3, <2", #TODO: Pour le CRES ?
    "openfisca-core[web-api] >=44, <45",
]

[project.urls]
Homepage = "https://github.com/openfisca/openfisca-tunisia"
Repository = "https://github.com/openfisca/openfisca-tunisia"
Documentation = "https://openfisca.org/doc"
Issues = "https://github.com/openfisca/openfisca-tunisia/issues"
Changelog = "https://github.com/openfisca/openfisca-tunisia/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff >=0.6.9, <1",
    "pytest",  # Let OpenFisca-Core decide pytest version
    "scipy >=1.10.1, <2.0",
    "requests >=2.28.2, <3.0",
    "twine >=6.0.0",
    "yamllint >=1.30.0, <2.0"
]
notebook = [
    'ipykernel >= 4.8',
    'jupyter-client >= 5.2',
    'matplotlib >= 2.2',
    'nbconvert >= 5.3',
    'nbformat >= 4.4',
    'pandas >= 0.22.0',
]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["build", "dist", ".git", "**/notebooks"]

[tool.ruff.lint]
ignore = ["F403", "F405"]  # star imports

[tool.ruff.lint.isort]
known-first-party = ["openfisca_tunisia"]
combine-as-imports = true
force-single-line = false

[tool.pytest.ini_options]
addopts      = "--showlocals --exitfirst --doctest-modules --disable-pytest-warnings"
testpaths    = "tests"
python_files = "**/*.py"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
    "ignore:invalid value encountered in divide:RuntimeWarning",
    "ignore:invalid value encountered in multiply:RuntimeWarning",
    "ignore:divide by zero encountered in divide:RuntimeWarning",
]

[tool.setuptools.packages.find]
include = ["openfisca_tunisia*"]

[tool.uv.workspace]
members = ["openfisca-tunisia"]
